--- a/TN BookStore/Views/Shared/_Layout.cshtml
+++ b/TN BookStore/Views/Shared/_Layout.cshtml
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - TN BookStore</title>
+    <link rel="icon" href="~/Images/BookStore.png" type="image/x-icon" />
     <link rel="stylesheet" href="~/css/Theme.css"  />
     <link rel="stylesheet" href="~/css/site.css" />
 </head>
