--- a/TN BookStore/Views/Home/Index.cshtml
+++ b/TN BookStore/Views/Home/Index.cshtml
@@ -5,3 +5,6 @@
 <div class="text-center">
     <h1 class="text-center">Welcome To TN BookStore</h1>
 </div>
+<div>
+    <img src="~/Images/BookWorld.jpg" alt="BookStore" width="100%" height="500"/>
+</div>
